--- a/bat/requirements.txt
+++ b/bat/requirements.txt
@@ -2,10 +2,13 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.3.0
 colorama==0.4.6
+gitdb==4.0.12
+GitPython==3.1.45
 idna==3.10
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.2
 PyQt5_sip==12.17.0
 pywin32==311
 requests==2.32.5
+smmap==5.0.2
 urllib3==2.5.0
