--- a/bat/requirements.txt
+++ b/bat/requirements.txt
@@ -1,7 +1,9 @@
+Cerberus==1.3.7
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.3.0
 colorama==0.4.6
+deepmerge==2.0
 gitdb==4.0.12
 GitPython==3.1.45
 idna==3.10
