--- a/bat/requirements.txt
+++ b/bat/requirements.txt
@@ -7,11 +7,17 @@ deepmerge==2.0
 gitdb==4.0.12
 GitPython==3.1.45
 idna==3.10
+numpy==2.3.4
+packaging==25.0
 pandas==2.3.3
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.2
 PyQt5_sip==12.17.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
 pywin32==311
 requests==2.32.5
+six==1.17.0
 smmap==5.0.2
+tzdata==2025.2
 urllib3==2.5.0
