--- a/bat/requirements.txt
+++ b/bat/requirements.txt
@@ -15,6 +15,7 @@ PyQt5-Qt5==5.15.2
 PyQt5_sip==12.17.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyJWT==2.10.1
 pywin32==311
 requests==2.32.5
 six==1.17.0
