--- a/bat/requirements.txt
+++ b/bat/requirements.txt
@@ -8,11 +8,14 @@ gitdb==4.0.12
 GitPython==3.1.45
 idna==3.10
 numpy==2.3.4
+markdown==3.10
 packaging==25.0
 pandas==2.3.3
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.2
 PyQt5_sip==12.17.0
+PyQtWebEngine>=5.15.6
+PyQtWebEngine-Qt5>=5.15.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyJWT==2.10.1
